--- a/components/common/QuizCards/QuizCards.module.scss
+++ b/components/common/QuizCards/QuizCards.module.scss
@@ -91,6 +91,7 @@
   display: flex;
   position: relative;
   transition: all 0.5s;
+  cursor: pointer;
 
   &:hover {
     background: linear-gradient(
@@ -158,18 +159,6 @@
   bottom: -170rem;
   // left: -40rem;
   width: 500rem;
+  pointer-events: none;
 }
 
-// /* AI */
-
-// .aiSection {
-//   width: 100%;
-//   height: 100%;
-//   position: absolute;
-// }
-// .aiSection {
-//   width: 100%;
-//   height: 15%;
-//   position: absolute;
-//   bottom: 30rem;
-// }
