--- a/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
+++ b/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
@@ -24,7 +24,9 @@
   height: 18%;
   padding: 25rem 172rem 20rem;
   align-items: center;
-  backdrop-filter: blur(5rem);
+  background-color: black;
+  opacity: 1;
+  // backdrop-filter: blur(5rem);
 }
 
 .backMenu {
@@ -102,20 +104,26 @@
   offset-path: path(
     "M175 79.1803C179.012 79.1803 433.215 265.278 536.5 299.181C664.178 341.09 792.489 285.316 822.369 217.034C823.884 213.572 826.097 210.246 829.225 208.124C899.309 160.559 911.244 389.47 1028 385.677C1289.5 377.18 1340 -54.3216 1199 52.6764C1134.84 101.362 1329 648.177 1115 691.68C1044.67 705.978 892 540.68 838.5 556.68C785 572.68 733 722.68 669 691.68C605 660.68 573.5 487.68 480.5 500.68C387.5 513.68 344.365 672.072 279 691.68C204 714.18 15 697.18 37.5002 585.68C46.4961 541.1 196 543.68 175 482.68C154 421.68 11.5002 402.18 37.5002 368.18"
   );
+  offset-rotate: 0deg;
   transition: all 1.5s;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  bottom: -12rem;
+  bottom: -25rem;
 }
 
 .pathButton {
+  position: absolute;
   width: 60rem;
   height: 60rem;
   z-index: 5;
+  transition: 0.8s;
+  transition-property: opacity;
+  transition-delay: 0.5s;
 }
 
 .buttonContainer {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
