--- a/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
+++ b/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
@@ -16,17 +16,22 @@
   flex-direction: column;
 }
 
-.left {
+.header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  height: 18%;
+  height: 22%;
   padding: 25rem 172rem 20rem;
   align-items: center;
-  background-color: black;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 0, 0, 0.7) 50%,
+    rgba(0, 0, 0, 0.85) 100%
+  );
   opacity: 1;
-  // backdrop-filter: blur(5rem);
+  backdrop-filter: blur(1rem);
 }
 
 .backMenu {
@@ -67,23 +72,29 @@
   justify-content: center;
   align-items: center;
 }
+.path {
+  filter: drop-shadow(0rem 0rem 16rem #fff) drop-shadow(0rem 0rem 16rem #fff)
+    drop-shadow(0rem 0rem 4rem #fff) drop-shadow(0rem 0rem 10rem #ffffff86);
+}
 
 .pathBlue {
-  stroke: var(--light-blue);
+  stroke: #ffaa00;
   stroke-dasharray: 4200;
-  // animation: dash 2s linear forwards;
-  // animation-direction: reverse;
+
+  filter: drop-shadow(0rem 0rem 8rem rgb(255, 217, 0))
+    drop-shadow(0rem 0rem 4rem #ffaa00);
 }
 
 @keyframes dash {
   from {
-    stroke-dashoffset: var(--dash-offset);; /* Начальное значение, когда весь путь скрыт */
+    stroke-dashoffset: var(
+      --dash-offset
+    ); /* Начальное значение, когда весь путь скрыт */
   }
   to {
     stroke-dashoffset: 0; /* Конечное значение, использующее переменную --dash-offset */
   }
 }
-
 
 .quiz {
   width: 1260rem;
@@ -118,12 +129,12 @@
 
 .pathButton {
   position: absolute;
-  width: 60rem;
-  height: 60rem;
+  width: 112rem;
+  height: 112rem;
   z-index: 5;
   transition: 0.8s;
   transition-property: opacity;
-  transition-delay: 1.0s;
+  transition-delay: 1s;
 }
 
 .buttonContainer {
@@ -140,7 +151,7 @@
   font-weight: 600;
   z-index: 5;
   position: fixed;
-  color: rgba(0, 0, 0, 0.5);
+  color: #424242;
 }
 
 .rightDone {
@@ -149,6 +160,7 @@
 
 .questionRoot {
   position: relative;
+  // opacity: 0.3;
 
   display: flex;
   flex-direction: column;
@@ -157,7 +169,7 @@
   width: 1260rem;
   height: 760rem;
   padding: 64rem;
-  bottom: 32rem;
+  bottom: 64rem;
 
   background-color: white;
   color: var(--light-blue);
