--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -324,8 +324,9 @@
   font-size: 22rem;
   height: 54rem;
   border: none;
+  padding: 0rem 64rem 0rem 64rem;
   background-color: var(--light-blue);
-  width: 55%;
+  // width: fit-content;
 }
 
 .correct {
@@ -362,6 +363,17 @@
   font-weight: 600;
   text-align: center;
   // margin-bottom: 25rem;
+}
+
+.detailCounter {
+  font-size: 20rem;
+}
+
+.successMessage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .detailsText {
