--- a/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
+++ b/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
@@ -21,7 +21,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  height: 22%;
+  height: 187rem;
   padding: 25rem 172rem 20rem;
   align-items: center;
   background: linear-gradient(
