--- a/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
+++ b/components/common/QuizCow/TouchPanel/TouchPanelCow.module.scss
@@ -22,7 +22,7 @@
   justify-content: space-between;
   width: 100%;
   height: 187rem;
-  padding: 25rem 172rem 20rem;
+  padding: 25rem 222rem 20rem;
   align-items: center;
   background: linear-gradient(
     0deg,
@@ -83,16 +83,52 @@
 
   filter: drop-shadow(0rem 0rem 8rem rgb(255, 217, 0))
     drop-shadow(0rem 0rem 4rem #ffaa00);
+
+  opacity: 0;
+  animation-name: vis;
+  animation-duration: 1s;
+  animation-delay: 4s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+}
+
+@keyframes vis {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.pathGrey {
+  stroke-dasharray: 4200;
+  animation-name: dash;
+  animation-duration: 3s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  animation-direction: reverse;
+}
+
+.pathGreyOrange {
+  animation: disvis 0.1 linear 3.2 1 normal forwards;
 }
 
 @keyframes dash {
   from {
-    stroke-dashoffset: var(
-      --dash-offset
-    ); /* Начальное значение, когда весь путь скрыт */
+    stroke-dashoffset: 0;
   }
   to {
-    stroke-dashoffset: 0; /* Конечное значение, использующее переменную --dash-offset */
+    stroke-dashoffset: 4200;
+  }
+}
+
+@keyframes disvis {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
 
@@ -154,6 +190,40 @@
   color: #424242;
 }
 
+.highlight {
+  opacity: 1;
+  animation: blink 3s ;
+  animation-delay: 3.2s;
+  animation-iteration-count: 1;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .rightDone {
   width: 100%;
 }
@@ -170,6 +240,7 @@
   height: 760rem;
   padding: 64rem;
   bottom: 64rem;
+  border-radius: 10rem;
 
   background-color: white;
   color: var(--light-blue);
