added hand zoom

--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -145,6 +145,16 @@
   pointer-events: none;
 }
 
+.handZoom{
+  position: absolute;
+  width: 360rem;
+  z-index: 2;
+  left: 50%;
+  bottom: 320rem;
+  transform: translate(-50%);
+  pointer-events: none;
+}
+
 .value {
   border-radius: 10rem;
   background-color: var(--light-blue);
