--- a/components/common/QuizCowRules/QuizCowRules.module.scss
+++ b/components/common/QuizCowRules/QuizCowRules.module.scss
@@ -101,7 +101,8 @@
   width: 1350rem;
   height: 100rem;
   justify-content: flex-start;
-  gap: 82rem;
+  gap: 110rem;
+  z-index: 1;
 }
 
 .clouds {
@@ -111,4 +112,18 @@
   background-image: url("/images/background/clouds.png");
   background-size: cover;
   z-index: 0;
+}
+
+.whiteGradient {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 280rem;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.6) 50%,
+    rgba(255, 255, 255, 0.99) 100%
+  );
 }
