--- a/components/common/aiChat/aiChat.module.scss
+++ b/components/common/aiChat/aiChat.module.scss
@@ -267,13 +267,14 @@
 
 .chatRoot {
   display: flex;
-  height: 540rem;
+  // height: 540rem;
   flex-direction: column;
   justify-content: flex-end;
 }
 
 .messages {
   width: 100%;
+  // height: 50%;
   height: 400rem;
   overflow: auto;
   display: flex;
@@ -311,15 +312,18 @@
 
 .input {
   position: relative;
+  color: black;
+  font-size: 20rem;
+  display: flex;
+  flex-direction: column;
+  gap: 12rem;
 }
 
 .input > form > input[type="text"] {
   font-family: monospace;
   font-size: 16rem;
   border: 0;
-  border-radius: 0;
-  border-bottom-left-radius: 10rem;
-  border-bottom-right-radius: 10rem;
+  border-radius: 15rem;
   border-top: 1rem solid #eee;
   box-shadow: none;
   box-sizing: border-box;
