toggle switch on Leap

--- a/components/common/IvolgaRules/IvolgaRules.module.scss
+++ b/components/common/IvolgaRules/IvolgaRules.module.scss
@@ -78,16 +78,19 @@
   color: white;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  margin-top: 496rem;
 }
 
 .ivolgaImg {
-  width: 1160rem;
+  width: 1012rem;
+  margin-right: 401rem;
   margin-top: 220rem;
   position: absolute;
 }
 
-.containerBtn{
-  margin-top: 256rem;
+.containerBtn {
+  margin-top: 252rem;
   z-index: 5;
 }
 
@@ -95,7 +98,7 @@
   background-color: white;
   color: var(--light-blue);
   width: 400rem;
-  border-radius: 100px;
+  border-radius: 100rem;
   border: none;
   padding: 20rem 65rem 20rem 64rem;
   font-weight: 700;
@@ -106,11 +109,10 @@
   cursor: pointer;
 }
 
-
 .speechBubbleContainer {
   position: absolute;
   width: 510rem;
-  left: 42%;
+  left: 75%;
   top: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -124,7 +126,7 @@
   line-height: 22rem;
   width: 420rem;
   background: rgba(255, 255, 255, 0.2);
-  border-radius: 10px;
+  border-radius: 10rem;
   padding: 24rem;
   text-align: center;
   color: white;
@@ -135,8 +137,114 @@
 .triangle {
   width: 10rem;
   height: 10rem;
-  border-top: 39px solid transparent;
-  border-bottom: 2px solid transparent;
-  border-right: 20px solid rgba(255, 255, 255, 0.2);
-  border-left: 32px solid transparent;
+  border-top: 39rem solid transparent;
+  border-bottom: 2rem solid transparent;
+  border-right: 20rem solid rgba(255, 255, 255, 0.2);
+  border-left: 32rem solid transparent;
+}
+
+.togglecontainer {
+  display: flex;
+  color: white;
+  font-size: 28rem;
+  font-weight: 700;
+  gap: 20rem;
+  flex-direction: column;
+  margin-top: 20rem;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 800rem;
+  height: 66rem;
+  margin-right: 20rem;
+  z-index: 1;
+  display: flex;
+  transition: all 0.2s ease-in-out;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(204, 204, 204);
+  transition: 0.4s;
+  border-radius: 40rem;
+  border: none;
+  transition: all 0.2s ease-in-out;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 58rem;
+  width: 450rem;
+  left: 4rem;
+  bottom: 4rem;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 40rem;
+  box-shadow: 0 0 6rem rgb(165, 165, 165);
+}
+
+input:checked + .slider {
+  background-color: rgb(204, 204, 204);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 6rem rgb(165, 165, 165);
+}
+
+input:checked + .slider:before {
+  transform: translateX(474rem);
+  width: 316rem;
+}
+
+.switch-label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20rem;
+  font-weight: 700;
+  font-size: 24rem;
+  cursor: pointer;
+}
+
+.onText,
+.offText {
+  font-size: 24rem;
+  font-weight: 700;
+  transition: all 0.2s ease-in-out;
+}
+
+.onText {
+  color: gray;
+  z-index: 2;
+}
+
+.offText {
+  color: gray;
+  z-index: 2;
+}
+
+input:checked + .slider .onText {
+  color: var(--light-blue);
+}
+
+input:not(:checked) + .slider .offText {
+  color: var(--light-blue);
 }
