--- a/components/common/aiChat/aiChat.module.scss
+++ b/components/common/aiChat/aiChat.module.scss
@@ -13,6 +13,20 @@
   align-items: center;
 }
 
+.keyBoard {
+  width: 90%;
+  color: black;
+  font-size: 20rem;
+  position: absolute;
+  bottom: 20rem;
+  height: 200rem;
+}
+
+.waiting {
+  width: 100rem;
+  height:100rem;
+}
+
 .left {
   display: flex;
   align-items: center;
@@ -52,7 +66,7 @@
 .right {
   width: 72%;
   height: 100%;
-  padding: 64rem 64rem 200rem 64rem;
+  padding: 64rem 64rem 240rem 64rem;
   transition: all 0.5s ease-in-out;
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -275,7 +289,18 @@
 .messages {
   width: 100%;
   // height: 50%;
-  height: 400rem;
+  height: 540rem;
+  overflow: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10rem 0rem;
+}
+
+.messsageTest {
+  height: 100%;
+  width: 80%;
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -293,7 +318,8 @@
   border-radius: 20rem 20rem 20rem 1rem;
   background: white;
   color: black;
-  min-width: 40rem;
+  max-width: 60%;
+  width: fit-content;
   font-size: 22rem;
   line-height: 26rem;
 }
@@ -305,7 +331,8 @@
   border-radius: 20rem 20rem 1rem 20rem;
   background: white;
   color: black;
-  min-width: 40rem;
+  max-width: 40%;
+  width: 100%;
   font-size: 22rem;
   line-height: 26rem;
 }
