added images to quiz Pig

--- a/components/common/QuizCowRules/QuizCowRules.module.scss
+++ b/components/common/QuizCowRules/QuizCowRules.module.scss
@@ -95,6 +95,25 @@
 }
 
 .cowIMG {
+  position: absolute;
+  right: 40rem;
+  width: 700rem;
+  padding-top: 68rem;
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+}
+
+.pigIMG {
+  position: absolute;
+  right: 40rem;
+  width: 700rem;
+  padding-top: 68rem;
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+}
+
+
+.cowIMG {
   right: 40rem;
   width: 700rem;
   padding-top: 68rem;
