--- a/components/common/QuizPig/TouchPanelPig/TouchPanelPig.module.scss
+++ b/components/common/QuizPig/TouchPanelPig/TouchPanelPig.module.scss
@@ -4,7 +4,7 @@
   font-size: 50rem;
   color: white;
   // background-color: #87bdff;
-  background-image: url("/images/quizCow/bg2.png");
+  background-image: url("/images/quizCowRules/pig_bg.jpg");
   background-size: cover;
 }
 
