--- a/components/common/aiChat/aiChat.module.scss
+++ b/components/common/aiChat/aiChat.module.scss
@@ -384,6 +384,7 @@
   float: right;
   padding: 15rem 10rem;
   margin: 10rem;
+  text-transform: lowercase;
   border-radius: 20rem 20rem 1rem 20rem;
   background: white;
   color: black;
