--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,10 @@ a {
   height: 100vh;
 }
 
+.react-simple-keyboard {
+  width: 80% !important;
+}
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
